-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: repo-valhalla
-
Component/s: hotspot
The recent sweeper removal (JDK-8290025) always enabled nmethod entry barriers. This revealed an issue where deoptimization from the slow path breaks the scalarized calling convention.
- duplicates
-
JDK-8294624 [lworld] compiler/valhalla/inlinetypes/TestDeoptimizationWhenBuffering.java crash DeoptimizationBlob on aarch64
-
- Closed
-