8293994: [lworld] Deoptimization from nmethod entry barrier breaks scalarized calling convention