src/hotspot/cpu/aarch64/c1_MacroAssembler_aarch64.cpp
@@ -303,37 +303,32 @@ void C1_MacroAssembler::inline_cache_check(Register receiver, Register iCache) {
   cmp_klass(receiver, iCache, rscratch1);
 }
 
-void C1_MacroAssembler::build_frame_helper(int frame_size_in_bytes, int sp_inc, bool needs_stack_repair) {
+void C1_MacroAssembler::build_frame_helper(int frame_size_in_bytes, int sp_offset_for_orig_pc, int sp_inc, bool has_scalarized_args, bool needs_stack_repair) {
   MacroAssembler::build_frame(frame_size_in_bytes);
 
   if (needs_stack_repair) {
     save_stack_increment(sp_inc, frame_size_in_bytes);
   }
+  if (has_scalarized_args) {
+    // Initialize orig_pc to detect deoptimization during buffering in the entry points
+    str(zr, Address(sp, sp_offset_for_orig_pc));
+  }
 }
 
 void C1_MacroAssembler::build_frame(int frame_size_in_bytes, int bang_size_in_bytes, int sp_offset_for_orig_pc, bool needs_stack_repair, bool has_scalarized_args, Label* verified_inline_entry_label) {
-  if (has_scalarized_args) {
-    // Initialize orig_pc to detect deoptimization during buffering in the entry points
-    str(zr, Address(sp, sp_offset_for_orig_pc - frame_size_in_bytes));
-  }
-  if (!needs_stack_repair && verified_inline_entry_label != NULL) {
-    bind(*verified_inline_entry_label);
-  }
-
   // Make sure there is enough stack space for this method's activation.
   // Note that we do this before creating a frame.
   assert(bang_size_in_bytes >= frame_size_in_bytes, "stack bang size incorrect");
   generate_stack_overflow_check(bang_size_in_bytes);
 
-  build_frame_helper(frame_size_in_bytes, 0, needs_stack_repair);
+  build_frame_helper(frame_size_in_bytes, sp_offset_for_orig_pc, 0, has_scalarized_args, needs_stack_repair);
 
   // Insert nmethod entry barrier into frame.
   BarrierSetAssembler* bs = BarrierSet::barrier_set()->barrier_set_assembler();
   bs->nmethod_entry_barrier(this, NULL /* slow_path */, NULL /* continuation */, NULL /* guard */);
 
-  if (needs_stack_repair && verified_inline_entry_label != NULL) {
-    // Jump here from the scalarized entry points that require additional stack space
-    // for packing scalarized arguments and therefore already created the frame.
+  if (verified_inline_entry_label != NULL) {
+    // Jump here from the scalarized entry points that already created the frame.
     bind(*verified_inline_entry_label);
   }
 }
@@ -365,20 +360,12 @@ int C1_MacroAssembler::scalarized_entry(const CompiledEntrySignature* ces, int f
   int args_passed = sig->length();
   int args_passed_cc = SigEntry::fill_sig_bt(sig_cc, sig_bt);
 
-  // Check if we need to extend the stack for packing
-  int sp_inc = 0;
-  if (args_on_stack > args_on_stack_cc) {
-    sp_inc = extend_stack_for_inline_args(args_on_stack);
-  }
-
   // Create a temp frame so we can call into the runtime. It must be properly set up to accommodate GC.
-  build_frame_helper(frame_size_in_bytes, sp_inc, ces->c1_needs_stack_repair());
-
-  // Initialize orig_pc to detect deoptimization during buffering in below runtime call
-  str(zr, Address(sp, sp_offset_for_orig_pc));
+  build_frame_helper(frame_size_in_bytes, sp_offset_for_orig_pc, 0, true, ces->c1_needs_stack_repair());
 
   // The runtime call might safepoint, make sure nmethod entry barrier is executed
   BarrierSetAssembler* bs = BarrierSet::barrier_set()->barrier_set_assembler();
+  // C1 code is not hot enough to micro optimize the nmethod entry barrier with an out-of-line stub
   bs->nmethod_entry_barrier(this, NULL /* slow_path */, NULL /* continuation */, NULL /* guard */);
 
   // FIXME -- call runtime only if we cannot in-line allocate all the incoming inline type args.
@@ -397,16 +384,20 @@ int C1_MacroAssembler::scalarized_entry(const CompiledEntrySignature* ces, int f
   // Remove the temp frame
   MacroAssembler::remove_frame(frame_size_in_bytes);
 
+  // Check if we need to extend the stack for packing
+  int sp_inc = 0;
+  if (args_on_stack > args_on_stack_cc) {
+    sp_inc = extend_stack_for_inline_args(args_on_stack);
+  }
+
   shuffle_inline_args(true, is_inline_ro_entry, sig_cc,
                       args_passed_cc, args_on_stack_cc, regs_cc, // from
                       args_passed, args_on_stack, regs,          // to
                       sp_inc, val_array);
 
-  if (ces->c1_needs_stack_repair()) {
-    // Create the real frame. Below jump will then skip over the stack banging and frame
-    // setup code in the verified_inline_entry (which has a different real_frame_size).
-    build_frame_helper(frame_size_in_bytes, sp_inc, true);
-  }
+  // Create the real frame. Below jump will then skip over the stack banging and frame
+  // setup code in the verified_inline_entry (which has a different real_frame_size).
+  build_frame_helper(frame_size_in_bytes, sp_offset_for_orig_pc, sp_inc, true, ces->c1_needs_stack_repair());
 
   b(verified_inline_entry_label);
   return rt_call_offset;
