src/hotspot/cpu/aarch64/gc/shared/barrierSetNMethod_aarch64.cpp
@@ -150,6 +150,15 @@ void BarrierSetNMethod::deoptimize(nmethod* nm, address* return_address_ptr) {
                                 thread->name(), frame.sp(), nm->verified_entry_point());
   }
 
+  if (nm->is_compiled_by_c1() && nm->method()->has_scalarized_args()) {
+    // We can't deoptimize in the entry points of a C1 compiled method.
+    // Set the original pc such that code emitted by LIRGenerator::do_Base will detect the pending deoptimization.
+    address* unextended_sp = return_address_ptr + 1;
+    address* orig_pc_addr = (address*)((address)unextended_sp + nm->orig_pc_offset());
+    *orig_pc_addr = *return_address_ptr;
+    return;
+  }
+
   new_frame->sp = frame.sp();
   new_frame->fp = frame.fp();
   new_frame->lr = frame.pc();
